# internal/server/protocol/v1/server.pb.go
@@ -854,7 +854,7 @@ var file_v1_server_proto_rawDesc = []byte{
 	0x65, 0x12, 0x2b, 0x0a, 0x07, 0x63, 0x6f, 0x6e, 0x74, 0x65, 0x6e, 0x74, 0x18, 0x02, 0x20, 0x01,
 	0x28, 0x0b, 0x32, 0x0f, 0x2e, 0x76, 0x31, 0x2e, 0x44, 0x61, 0x74, 0x61, 0x43, 0x6f, 0x6e, 0x74,
 	0x65, 0x6e, 0x74, 0x48, 0x00, 0x52, 0x07, 0x63, 0x6f, 0x6e, 0x74, 0x65, 0x6e, 0x74, 0x42, 0x08,
-	0x0a, 0x06, 0x6f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x32, 0x8d, 0x07, 0x0a, 0x0a, 0x53, 0x65, 0x72,
+	0x0a, 0x06, 0x6f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x32, 0xf1, 0x07, 0x0a, 0x0a, 0x53, 0x65, 0x72,
 	0x76, 0x69, 0x63, 0x65, 0x41, 0x50, 0x49, 0x12, 0x48, 0x0a, 0x04, 0x48, 0x65, 0x61, 0x64, 0x12,
 	0x0c, 0x2e, 0x76, 0x31, 0x2e, 0x4f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x49, 0x44, 0x1a, 0x18, 0x2e,
 	0x76, 0x31, 0x2e, 0x53, 0x69, 0x6d, 0x70, 0x6c, 0x65, 0x4f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x52,
@@ -905,30 +905,36 @@ var file_v1_server_proto_rawDesc = []byte{
 	0x49, 0x44, 0x1a, 0x1b, 0x2e, 0x76, 0x31, 0x2e, 0x50, 0x72, 0x6f, 0x63, 0x65, 0x73, 0x73, 0x69,
 	0x6e, 0x67, 0x53, 0x74, 0x61, 0x74, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22,
 	0x19, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x13, 0x12, 0x11, 0x2f, 0x76, 0x31, 0x2f, 0x73, 0x74, 0x61,
-	0x74, 0x65, 0x2f, 0x7b, 0x69, 0x64, 0x3d, 0x2a, 0x2a, 0x7d, 0x12, 0x5c, 0x0a, 0x14, 0x57, 0x61,
-	0x74, 0x63, 0x68, 0x50, 0x72, 0x6f, 0x63, 0x65, 0x73, 0x73, 0x69, 0x6e, 0x67, 0x53, 0x74, 0x61,
-	0x74, 0x65, 0x12, 0x0c, 0x2e, 0x76, 0x31, 0x2e, 0x4f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x49, 0x44,
-	0x1a, 0x13, 0x2e, 0x76, 0x31, 0x2e, 0x50, 0x72, 0x6f, 0x63, 0x65, 0x73, 0x73, 0x69, 0x6e, 0x67,
-	0x53, 0x74, 0x61, 0x74, 0x65, 0x22, 0x1f, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x19, 0x12, 0x17, 0x2f,
-	0x76, 0x31, 0x2f, 0x73, 0x74, 0x61, 0x74, 0x65, 0x2f, 0x77, 0x61, 0x74, 0x63, 0x68, 0x2f, 0x7b,
-	0x69, 0x64, 0x3d, 0x2a, 0x2a, 0x7d, 0x30, 0x01, 0x42, 0x83, 0x02, 0x92, 0x41, 0xd9, 0x01, 0x12,
-	0x6e, 0x0a, 0x20, 0x61, 0x70, 0x66, 0x73, 0x20, 0x66, 0x69, 0x6c, 0x65, 0x2d, 0x70, 0x72, 0x6f,
-	0x63, 0x65, 0x73, 0x73, 0x69, 0x6e, 0x67, 0x20, 0x73, 0x74, 0x72, 0x65, 0x61, 0x6d, 0x20, 0x74,
-	0x6f, 0x6f, 0x6c, 0x22, 0x45, 0x0a, 0x1c, 0x61, 0x70, 0x66, 0x73, 0x20, 0x66, 0x69, 0x6c, 0x65,
-	0x2d, 0x70, 0x72, 0x6f, 0x63, 0x65, 0x73, 0x73, 0x69, 0x6e, 0x67, 0x20, 0x70, 0x72, 0x6f, 0x6a,
-	0x65, 0x63, 0x74, 0x12, 0x17, 0x68, 0x74, 0x74, 0x70, 0x73, 0x3a, 0x2f, 0x2f, 0x61, 0x70, 0x66,
-	0x73, 0x2e, 0x69, 0x6f, 0x2f, 0x67, 0x61, 0x74, 0x65, 0x77, 0x61, 0x79, 0x1a, 0x0c, 0x69, 0x6e,
-	0x66, 0x6f, 0x40, 0x61, 0x70, 0x66, 0x73, 0x2e, 0x69, 0x6f, 0x32, 0x03, 0x31, 0x2e, 0x30, 0x1a,
-	0x0e, 0x6c, 0x6f, 0x63, 0x61, 0x6c, 0x68, 0x6f, 0x73, 0x74, 0x3a, 0x39, 0x36, 0x37, 0x38, 0x22,
-	0x03, 0x2f, 0x76, 0x31, 0x2a, 0x03, 0x01, 0x02, 0x04, 0x32, 0x10, 0x61, 0x70, 0x70, 0x6c, 0x69,
-	0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x6a, 0x73, 0x6f, 0x6e, 0x3a, 0x10, 0x61, 0x70, 0x70,
-	0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x6a, 0x73, 0x6f, 0x6e, 0x72, 0x29, 0x0a,
-	0x0d, 0x61, 0x70, 0x66, 0x73, 0x20, 0x41, 0x50, 0x49, 0x20, 0x64, 0x6f, 0x63, 0x73, 0x12, 0x18,
-	0x68, 0x74, 0x74, 0x70, 0x73, 0x3a, 0x2f, 0x2f, 0x64, 0x6f, 0x63, 0x73, 0x2e, 0x61, 0x70, 0x66,
-	0x73, 0x2e, 0x69, 0x6f, 0x2f, 0x61, 0x70, 0x69, 0x0a, 0x14, 0x63, 0x6f, 0x6d, 0x2e, 0x61, 0x70,
-	0x66, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x63, 0x6f, 0x6c, 0x2e, 0x76, 0x31, 0x42, 0x06,
-	0x53, 0x65, 0x72, 0x76, 0x65, 0x72, 0x50, 0x01, 0x5a, 0x04, 0x2e, 0x2f, 0x76, 0x31, 0x62, 0x06,
-	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x74, 0x65, 0x2f, 0x7b, 0x69, 0x64, 0x3d, 0x2a, 0x2a, 0x7d, 0x12, 0x62, 0x0a, 0x10, 0x45, 0x6e,
+	0x73, 0x75, 0x72, 0x65, 0x50, 0x72, 0x6f, 0x63, 0x65, 0x73, 0x73, 0x69, 0x6e, 0x67, 0x12, 0x0c,
+	0x2e, 0x76, 0x31, 0x2e, 0x4f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x49, 0x44, 0x1a, 0x1b, 0x2e, 0x76,
+	0x31, 0x2e, 0x50, 0x72, 0x6f, 0x63, 0x65, 0x73, 0x73, 0x69, 0x6e, 0x67, 0x53, 0x74, 0x61, 0x74,
+	0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x23, 0x82, 0xd3, 0xe4, 0x93, 0x02,
+	0x1d, 0x3a, 0x01, 0x2a, 0x22, 0x18, 0x2f, 0x76, 0x31, 0x2f, 0x73, 0x74, 0x61, 0x74, 0x65, 0x2f,
+	0x7b, 0x69, 0x64, 0x3d, 0x2a, 0x2a, 0x7d, 0x2f, 0x65, 0x6e, 0x73, 0x75, 0x72, 0x65, 0x12, 0x5c,
+	0x0a, 0x14, 0x57, 0x61, 0x74, 0x63, 0x68, 0x50, 0x72, 0x6f, 0x63, 0x65, 0x73, 0x73, 0x69, 0x6e,
+	0x67, 0x53, 0x74, 0x61, 0x74, 0x65, 0x12, 0x0c, 0x2e, 0x76, 0x31, 0x2e, 0x4f, 0x62, 0x6a, 0x65,
+	0x63, 0x74, 0x49, 0x44, 0x1a, 0x13, 0x2e, 0x76, 0x31, 0x2e, 0x50, 0x72, 0x6f, 0x63, 0x65, 0x73,
+	0x73, 0x69, 0x6e, 0x67, 0x53, 0x74, 0x61, 0x74, 0x65, 0x22, 0x1f, 0x82, 0xd3, 0xe4, 0x93, 0x02,
+	0x19, 0x12, 0x17, 0x2f, 0x76, 0x31, 0x2f, 0x73, 0x74, 0x61, 0x74, 0x65, 0x2f, 0x77, 0x61, 0x74,
+	0x63, 0x68, 0x2f, 0x7b, 0x69, 0x64, 0x3d, 0x2a, 0x2a, 0x7d, 0x30, 0x01, 0x42, 0x83, 0x02, 0x92,
+	0x41, 0xd9, 0x01, 0x12, 0x6e, 0x0a, 0x20, 0x61, 0x70, 0x66, 0x73, 0x20, 0x66, 0x69, 0x6c, 0x65,
+	0x2d, 0x70, 0x72, 0x6f, 0x63, 0x65, 0x73, 0x73, 0x69, 0x6e, 0x67, 0x20, 0x73, 0x74, 0x72, 0x65,
+	0x61, 0x6d, 0x20, 0x74, 0x6f, 0x6f, 0x6c, 0x22, 0x45, 0x0a, 0x1c, 0x61, 0x70, 0x66, 0x73, 0x20,
+	0x66, 0x69, 0x6c, 0x65, 0x2d, 0x70, 0x72, 0x6f, 0x63, 0x65, 0x73, 0x73, 0x69, 0x6e, 0x67, 0x20,
+	0x70, 0x72, 0x6f, 0x6a, 0x65, 0x63, 0x74, 0x12, 0x17, 0x68, 0x74, 0x74, 0x70, 0x73, 0x3a, 0x2f,
+	0x2f, 0x61, 0x70, 0x66, 0x73, 0x2e, 0x69, 0x6f, 0x2f, 0x67, 0x61, 0x74, 0x65, 0x77, 0x61, 0x79,
+	0x1a, 0x0c, 0x69, 0x6e, 0x66, 0x6f, 0x40, 0x61, 0x70, 0x66, 0x73, 0x2e, 0x69, 0x6f, 0x32, 0x03,
+	0x31, 0x2e, 0x30, 0x1a, 0x0e, 0x6c, 0x6f, 0x63, 0x61, 0x6c, 0x68, 0x6f, 0x73, 0x74, 0x3a, 0x39,
+	0x36, 0x37, 0x38, 0x22, 0x03, 0x2f, 0x76, 0x31, 0x2a, 0x03, 0x01, 0x02, 0x04, 0x32, 0x10, 0x61,
+	0x70, 0x70, 0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x6a, 0x73, 0x6f, 0x6e, 0x3a,
+	0x10, 0x61, 0x70, 0x70, 0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x6a, 0x73, 0x6f,
+	0x6e, 0x72, 0x29, 0x0a, 0x0d, 0x61, 0x70, 0x66, 0x73, 0x20, 0x41, 0x50, 0x49, 0x20, 0x64, 0x6f,
+	0x63, 0x73, 0x12, 0x18, 0x68, 0x74, 0x74, 0x70, 0x73, 0x3a, 0x2f, 0x2f, 0x64, 0x6f, 0x63, 0x73,
+	0x2e, 0x61, 0x70, 0x66, 0x73, 0x2e, 0x69, 0x6f, 0x2f, 0x61, 0x70, 0x69, 0x0a, 0x14, 0x63, 0x6f,
+	0x6d, 0x2e, 0x61, 0x70, 0x66, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x63, 0x6f, 0x6c, 0x2e,
+	0x76, 0x31, 0x42, 0x06, 0x53, 0x65, 0x72, 0x76, 0x65, 0x72, 0x50, 0x01, 0x5a, 0x04, 0x2e, 0x2f,
+	0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -987,20 +993,22 @@ var file_v1_server_proto_depIdxs = []int32{
 	15, // 18: v1.ServiceAPI.SetWorkflow:input_type -> v1.DataWorkflow
 	0,  // 19: v1.ServiceAPI.GetWorkflow:input_type -> v1.ManifestGroup
 	6,  // 20: v1.ServiceAPI.GetProcessingState:input_type -> v1.ObjectID
-	6,  // 21: v1.ServiceAPI.WatchProcessingState:input_type -> v1.ObjectID
-	10, // 22: v1.ServiceAPI.Head:output_type -> v1.SimpleObjectResponse
-	11, // 23: v1.ServiceAPI.Get:output_type -> v1.ObjectResponse
-	9,  // 24: v1.ServiceAPI.Refresh:output_type -> v1.SimpleResponse
-	9,  // 25: v1.ServiceAPI.SetManifest:output_type -> v1.SimpleResponse
-	8,  // 26: v1.ServiceAPI.GetManifest:output_type -> v1.ManifestResponse
-	10, // 27: v1.ServiceAPI.Upload:output_type -> v1.SimpleObjectResponse
-	9,  // 28: v1.ServiceAPI.Delete:output_type -> v1.SimpleResponse
-	9,  // 29: v1.ServiceAPI.SetWorkflow:output_type -> v1.SimpleResponse
-	16, // 30: v1.ServiceAPI.GetWorkflow:output_type -> v1.WorkflowResponse
-	17, // 31: v1.ServiceAPI.GetProcessingState:output_type -> v1.ProcessingStateResponse
-	18, // 32: v1.ServiceAPI.WatchProcessingState:output_type -> v1.ProcessingState
-	22, // [22:33] is the sub-list for method output_type
-	11, // [11:22] is the sub-list for method input_type
+	6,  // 21: v1.ServiceAPI.EnsureProcessing:input_type -> v1.ObjectID
+	6,  // 22: v1.ServiceAPI.WatchProcessingState:input_type -> v1.ObjectID
+	10, // 23: v1.ServiceAPI.Head:output_type -> v1.SimpleObjectResponse
+	11, // 24: v1.ServiceAPI.Get:output_type -> v1.ObjectResponse
+	9,  // 25: v1.ServiceAPI.Refresh:output_type -> v1.SimpleResponse
+	9,  // 26: v1.ServiceAPI.SetManifest:output_type -> v1.SimpleResponse
+	8,  // 27: v1.ServiceAPI.GetManifest:output_type -> v1.ManifestResponse
+	10, // 28: v1.ServiceAPI.Upload:output_type -> v1.SimpleObjectResponse
+	9,  // 29: v1.ServiceAPI.Delete:output_type -> v1.SimpleResponse
+	9,  // 30: v1.ServiceAPI.SetWorkflow:output_type -> v1.SimpleResponse
+	16, // 31: v1.ServiceAPI.GetWorkflow:output_type -> v1.WorkflowResponse
+	17, // 32: v1.ServiceAPI.GetProcessingState:output_type -> v1.ProcessingStateResponse
+	17, // 33: v1.ServiceAPI.EnsureProcessing:output_type -> v1.ProcessingStateResponse
+	18, // 34: v1.ServiceAPI.WatchProcessingState:output_type -> v1.ProcessingState
+	23, // [23:35] is the sub-list for method output_type
+	11, // [11:23] is the sub-list for method input_type
 	11, // [11:11] is the sub-list for extension type_name
 	11, // [11:11] is the sub-list for extension extendee
 	0,  // [0:11] is the sub-list for field type_name
